syntax = "proto3";

package zenao.v1;
option go_package = "github.com/samouraiworld/zenao/backend/zenao/v1;zenaov1";

service ZenaoService {
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse);
  rpc CreateBusinessAccount(CreateBusinessAccountRequest) returns (CreateBusinessAccountResponse);
  rpc ListBusinessAccounts(ListBusinessAccountsRequest) returns (ListBusinessAccountsResponse);
  rpc CreateCheckoutSession(CreateCheckoutSessionRequest) returns (CreateCheckoutSessionResponse);
  rpc GetBusinessAccountLink(GetBusinessAccountLinkRequest) returns (GetBusinessAccountLinkResponse);
}

message CreateEventRequest {
  string title = 1;
  string description = 2;
  string image_uri = 3;
  uint64 start_date = 4; // unix seconds
  uint64 end_date = 5; // unix seconds
  double ticket_price = 6; // XXX: use fixed point?
  uint32 capacity = 7;
}

message CreateEventResponse {
  string id = 1;
}

message CreateCheckoutSessionRequest {
  string event_id = 1;
  uint32 num_tickets = 2;
  string email = 3;
}

message CreateCheckoutSessionResponse {
  string checkout_uri = 1;
}

message CreateBusinessAccountRequest {

}

message CreateBusinessAccountResponse {
  string account_link = 1;
}

message BusinessAccount {
  string id = 1;
  string company_name = 2;
  string email = 3;
  bool can_charge = 4;
}

message ListBusinessAccountsRequest {

}

message ListBusinessAccountsResponse {
  repeated BusinessAccount accounts = 1;
}

message GetBusinessAccountLinkRequest {
  string id = 1;
}

message GetBusinessAccountLinkResponse {
  string account_link = 1;
}